compilador_Guitarra/src/parser/compiladoraula.java
/* Generated By:JJTree&JavaCC: Do not edit this line. compiladoraula.java */
package parser;
import recovery.*;

public class compiladoraula/*@bgen(jjtree)*/implements compiladoraulaTreeConstants, compiladoraulaConstants {/*@bgen(jjtree)*/
  protected static JJTcompiladoraulaState jjtree = new JJTcompiladoraulaState();
        public static void main(String args []) throws ParseException
        {
           compiladoraula parser = new compiladoraula(System.in);//introduzir dados do teclado
           System.out.println("Compilador Guitarra");
           System.out.println("==========================");


           SimpleNode n = compiladoraula.main();
           n.dump("");
           try
           {

           }
           catch(Error e)
           {
              System.out.println(e.getMessage());
              System.out.println("se encontrou erro");
           }
        }
        static public String im(int x)
        {
            int k;
                String s;
            s = tokenImage[x];
            k = s.lastIndexOf("\u005c"");
            try {
              s = s.substring(1,k);
         }
         catch (StringIndexOutOfBoundsException e)
                   {}
           return s;
         }

         static Token lastError = null;
         static boolean eof;    // variável que indica se EOF foi alcançado

         // o método abaixo consome tokens até alcançar um que pertença ao conjunto
         // de sincronização
         static void consumeUntil(RecoverySet g,
                                 ParseException e,
                                 String met) throws ParseEOFException,
                                                    ParseException
         {
                Token tok;
                System.out.println();
                System.out.println("*** " + met + " ***");
                System.out.println("     Conjunto de sincroniza\u00e7\u00e3o: " + g);

                if (g == null) throw e; // se o conjunto é null, propaga a exceção

                tok = getToken(1); // pega token corrente
                while ( ! eof ) { // se não chegou ao fim do arquivo
                  if ( g.contains(tok.kind)) {//achou um token no conjunto
                    System.out.println("     Encontrado token de sincroniza\u00e7\u00e3o: " +
                                       im(tok.kind));
                    break;
                  }
                  System.out.println("     Ignorando o token: " + im(tok.kind));
                  getNextToken();     // pega próximo token       
              tok = getToken(1);
                  if (tok.kind == EOF && ! g.contains(EOF) ) // fim da entrada?   
                      eof = true;
          }
            if ( tok != lastError)  {
                  System.out.println(e.getMessage());
                  lastError = tok;

          }
          if ( eof )
                  throw new ParseEOFException("Encontrei EOF onde n\u00e3o deveria.");
          }

  static final public SimpleNode main() throws ParseException {
 /*@bgen(jjtree) main */
  SimpleNode jjtn000 = new SimpleNode(JJTMAIN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(INICIOPROGRAMA);
      id();
      jj_consume_token(ABRE);
      label_1:
      while (true) {
        sentencas();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TIPOINTEIRO:
        case TIPOBINARIO:
        case TIPOFRASE:
        case TIPOREAL:
        case ESCREVER:
        case LER:
        case SE:
        case SELECIONA:
        case PARA:
        case FACA:
        case ENQUANTO:
        case ID:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
      }
      jj_consume_token(FECHA);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void id() throws ParseException {
             /*@bgen(jjtree) id */
  SimpleNode jjtn000 = new SimpleNode(JJTID);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ID);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void sentencas() throws ParseException {
                   /*@bgen(jjtree) sentencas */
  SimpleNode jjtn000 = new SimpleNode(JJTSENTENCAS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TIPOINTEIRO:
      case TIPOBINARIO:
      case TIPOFRASE:
      case TIPOREAL:
        declaracaoVariavel();
        break;
      case ESCREVER:
        funcaoEscrever();
        break;
      case LER:
        funcaoLer();
        break;
      case ID:
        funcaoAtribuicao();
        break;
      case SE:
        funcaoSE();
        break;
      case SELECIONA:
        funcaoSelecione();
        break;
      case PARA:
        funcaoPara();
        break;
      case ENQUANTO:
        funcaoEnquanto();
        break;
      case FACA:
        funcaoFaca();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void declaracaoVariavel() throws ParseException {
 /*@bgen(jjtree) declaracaoVariavel */
 SimpleNode jjtn000 = new SimpleNode(JJTDECLARACAOVARIAVEL);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sincronizacao = First.declaracaoVariavel;
    try {
      try {
        tipoDado();
        id();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IGUAL:
          jj_consume_token(IGUAL);
          valor();
          break;
        default:
          jj_la1[2] = jj_gen;
          ;
        }
      } catch (ParseException e) {
                consumeUntil(sincronizacao, e, "declaracaoVariavel");
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void tipoDado() throws ParseException {
                   /*@bgen(jjtree) tipoDado */
  SimpleNode jjtn000 = new SimpleNode(JJTTIPODADO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TIPOINTEIRO:
        jj_consume_token(TIPOINTEIRO);
        break;
      case TIPOBINARIO:
        jj_consume_token(TIPOBINARIO);
        break;
      case TIPOFRASE:
        jj_consume_token(TIPOFRASE);
        break;
      case TIPOREAL:
        jj_consume_token(TIPOREAL);
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void valor() throws ParseException {
               /*@bgen(jjtree) valor */
  SimpleNode jjtn000 = new SimpleNode(JJTVALOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VALOR_CADEIA:
        jj_consume_token(VALOR_CADEIA);
        break;
      case VALOR_INTEIRO:
        jj_consume_token(VALOR_INTEIRO);
        break;
      case VALOR_REAL:
        jj_consume_token(VALOR_REAL);
        break;
      case ID:
        id();
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void funcaoEscrever() throws ParseException {
 /*@bgen(jjtree) funcaoEscrever */
 SimpleNode jjtn000 = new SimpleNode(JJTFUNCAOESCREVER);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sincronizacao = First.funcaoEscrever;
    try {
      try {
        jj_consume_token(ESCREVER);
        jj_consume_token(ABRECHAVES);
        valor();
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SOMA:
            ;
            break;
          default:
            jj_la1[5] = jj_gen;
            break label_2;
          }
          jj_consume_token(SOMA);
          valor();
        }
        jj_consume_token(FECHAVES);
      } catch (ParseException e) {
        consumeUntil(sincronizacao, e, "funcaoEscrever");
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void funcaoLer() throws ParseException {
 /*@bgen(jjtree) funcaoLer */
 SimpleNode jjtn000 = new SimpleNode(JJTFUNCAOLER);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sincronizacao = First.funcaoLer;
    try {
      try {
        jj_consume_token(LER);
        jj_consume_token(ABRECHAVES);
        id();
        jj_consume_token(FECHAVES);
      } catch (ParseException e) {
        consumeUntil(sincronizacao, e, "funcaoLer");
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void funcaoAtribuicao() throws ParseException {
 /*@bgen(jjtree) funcaoAtribuicao */
 SimpleNode jjtn000 = new SimpleNode(JJTFUNCAOATRIBUICAO);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sincronizacao = First.funcaoAtribuicao;
    try {
      try {
        id();
        jj_consume_token(IGUAL);
        operadorSimples();
      } catch (ParseException e) {
          consumeUntil(sincronizacao, e, "funcaoAtribuicao");
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void operadorSimples() throws ParseException {
                         /*@bgen(jjtree) operadorSimples */
  SimpleNode jjtn000 = new SimpleNode(JJTOPERADORSIMPLES);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
      case VALOR_INTEIRO:
      case VALOR_REAL:
      case VALOR_CADEIA:
        valor();
        break;
      case ABRECHAVES:
        operadorParenteses();
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SOMA:
        case SUBTRAIR:
        case MULTI:
        case DIVI:
        case MOD:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_3;
        }
        operadorAritmetico();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
        case VALOR_INTEIRO:
        case VALOR_REAL:
        case VALOR_CADEIA:
          valor();
          break;
        case ABRECHAVES:
          operadorParenteses();
          break;
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void operadorParenteses() throws ParseException {
                            /*@bgen(jjtree) operadorParenteses */
  SimpleNode jjtn000 = new SimpleNode(JJTOPERADORPARENTESES);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ABRECHAVES);
      operadorSimples();
      jj_consume_token(FECHAVES);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void operadorAritmetico() throws ParseException {
                            /*@bgen(jjtree) operadorAritmetico */
  SimpleNode jjtn000 = new SimpleNode(JJTOPERADORARITMETICO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SOMA:
        jj_consume_token(SOMA);
        break;
      case SUBTRAIR:
        jj_consume_token(SUBTRAIR);
        break;
      case MULTI:
        jj_consume_token(MULTI);
        break;
      case DIVI:
        jj_consume_token(DIVI);
        break;
      case MOD:
        jj_consume_token(MOD);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void funcaoSE() throws ParseException {
 /*@bgen(jjtree) funcaoSE */
 SimpleNode jjtn000 = new SimpleNode(JJTFUNCAOSE);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);RecoverySet sincronizacao = First.funcaoSE;
    try {
      try {
        jj_consume_token(SE);
        condicao();
        jj_consume_token(PONTOS);
        label_4:
        while (true) {
          sentencas();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case TIPOINTEIRO:
          case TIPOBINARIO:
          case TIPOFRASE:
          case TIPOREAL:
          case ESCREVER:
          case LER:
          case SE:
          case SELECIONA:
          case PARA:
          case FACA:
          case ENQUANTO:
          case ID:
            ;
            break;
          default:
            jj_la1[10] = jj_gen;
            break label_4;
          }
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SENAO:
          jj_consume_token(SENAO);
          label_5:
          while (true) {
            sentencas();
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case TIPOINTEIRO:
            case TIPOBINARIO:
            case TIPOFRASE:
            case TIPOREAL:
            case ESCREVER:
            case LER:
            case SE:
            case SELECIONA:
            case PARA:
            case FACA:
            case ENQUANTO:
            case ID:
              ;
              break;
            default:
              jj_la1[11] = jj_gen;
              break label_5;
            }
          }
          break;
        default:
          jj_la1[12] = jj_gen;
          ;
        }
        jj_consume_token(FIMBLOCO);
      } catch (ParseException e) {
          consumeUntil(sincronizacao, e, "funcaoSE");
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void condicao() throws ParseException {
                  /*@bgen(jjtree) condicao */
  SimpleNode jjtn000 = new SimpleNode(JJTCONDICAO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      condicaoSimples();
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case AND:
        case OU:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_6;
        }
        opLogico();
        condicaoSimples();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void condicaoSimples() throws ParseException {
                         /*@bgen(jjtree) condicaoSimples */
  SimpleNode jjtn000 = new SimpleNode(JJTCONDICAOSIMPLES);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      valor();
      opRelacional();
      valor();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void opLogico() throws ParseException {
                  /*@bgen(jjtree) opLogico */
  SimpleNode jjtn000 = new SimpleNode(JJTOPLOGICO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        jj_consume_token(AND);
        break;
      case OU:
        jj_consume_token(OU);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void opRelacional() throws ParseException {
                      /*@bgen(jjtree) opRelacional */
  SimpleNode jjtn000 = new SimpleNode(JJTOPRELACIONAL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MAIOR:
        jj_consume_token(MAIOR);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IGUAL:
          jj_consume_token(IGUAL);
          break;
        default:
          jj_la1[15] = jj_gen;
          ;
        }
        break;
      case MENOR:
        jj_consume_token(MENOR);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IGUAL:
          jj_consume_token(IGUAL);
          break;
        default:
          jj_la1[16] = jj_gen;
          ;
        }
        break;
      case IGUAL:
        jj_consume_token(IGUAL);
        jj_consume_token(IGUAL);
        break;
      case NAO:
        jj_consume_token(NAO);
        jj_consume_token(IGUAL);
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }
